[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["malakkhasawneh2 <malakkhasawneh2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.0"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
